[package]
name = "hackathon"
version = "0.1.0"
authors = ["Christopher Moussa <moussa1@llnl.gov>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-rs = { path = "../flux-rs" }
serde = "1.0"
serde_yaml = "0.8"
yaml-rust = "0.4"
